--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                         </li>
                         <li class="cs-li">
                             <a href="/portfolio.html" class="cs-li-link">
-                                Portfolio
+                                Blog
                             </a>
                         </li>
                         <li class="cs-li">
                             <a href="/reviews.html" class="cs-li-link">
-                                Reviews
+                                Over ons
                             </a>
                         </li>
                         <li class="cs-li">
@@ -395,10 +395,10 @@
             <!-- Logo Group -->
             <div class="cs-logo-group">
                 <a aria-label="go back to home" class="cs-logo" href="">
-                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Footer/logo-light.svg" alt="logo" width="240" height="32">
+                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/fulllogoWhite.png" alt="logo" width="240" height="32">
                 </a>
                 <p class="cs-text">
-                    Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
+                    Plan en boek eenvoudig rolstoelvriendelijke reizen met Roamly, de eerste AI-gestuurde reisplanner voor toegankelijke hotels, activiteiten en restaurants. Gebaseerd op echte beoordelingen en directe boekingen via Booking.com. Ontdek de wereld zonder zorgen.
                 </p>
             </div>
             <!-- Links -->
@@ -410,13 +410,13 @@
                     <a class="cs-nav-link" href="">Home</a>
                 </li>
                 <li class="cs-nav-li">
-                    <a class="cs-nav-link" href="">About</a>
+                    <a class="cs-nav-link" href="">Trip planner</a>
                 </li>
                 <li class="cs-nav-li">
-                    <a class="cs-nav-link" href="">Services</a>
+                    <a class="cs-nav-link" href="">Blog</a>
                 </li>
                 <li class="cs-nav-li">
-                    <a class="cs-nav-link" href="">Portfolio</a>
+                    <a class="cs-nav-link" href="">Over ons</a>
                 </li>
                 <li class="cs-nav-li">
                     <a class="cs-nav-link" href="">Contact</a>
@@ -428,17 +428,14 @@
                     <span class="cs-header">Contact</span>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="tel: 123-456-7890">(123) 456-7890</a>
+                    <a class="cs-contact-link" href="tel: 123-456-7890">+32 0492 84 39 55</a>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
+                    <a class="cs-contact-link" href="mailto:info@codestitch.com">info@roamly.com</a>
                 </li>
                 <!-- Social Media -->
                 <li class="cs-contact-li cs-social-group">
                     <div class="cs-social">
-                        <a class="cs-social-link" aria-label="visit google profile" href="">
-                            <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/google.svg" alt="google" width="11" height="11">
-                        </a>
                         <a class="cs-social-link" aria-label="visit facebook profile" href="">
                             <img class="cs-social-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Social/Facebook.svg" alt="facebook" width="6" height="11">
                         </a>
