--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
     <div class="cs-container">
         <!--Nav Logo-->
         <a href="/index.html" class="cs-logo" aria-label="back to home">
-            <img src="./assets/images/fulllogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
+            <img src="/assets/images/fulllogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
         <nav class="cs-nav" role="navigation">
@@ -20,11 +20,6 @@
                     <li class="cs-li">
                         <a href="/index.html" class="cs-li-link cs-active">
                             Home
-                        </a>
-                    </li>
-                    <li class="cs-li">
-                        <a href="/trip-planner.html" class="cs-li-link">
-                            Trip planner
                         </a>
                     </li>
                     <li class="cs-li">
