--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,6 @@
             </div>
             <!--Background Image-->
             <picture class="cs-background">
-                <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FMISC%2Fpills.jpg">
-                <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FMISC%2Fpills.jpg">
                 <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FMISC%2Fpills.jpg" alt="pills" width="1280" height="568" aria-hidden="true">
             </picture>
         </div>
@@ -131,9 +127,7 @@
                 
                     <!-- Background Image-->
                     <picture class="cs-bg-picture">
-                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/skyscraper-m.jpg">
-                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/skyscraper.jpg">
-                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/skyscraper.jpg" alt="building" width="542" height="662" aria-hidden="true">
+                        <img loading="lazy" decoding="async" src="assets/images/travelling-contact.jpeg" alt="building" width="542" height="662" aria-hidden="true">
                     </picture>
                 </div>
             </div>
