--- a/index.html
+++ b/index.html
@@ -6,34 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.roamly.com/" />
-
-    <meta name="description" content="Meta description for the page" />
-    <meta
-      name="keywords"
-      content="toegankelijke reizen, rolstoelvriendelijke hotels, inclusief toerisme, reizen met beperking, rolstoelreizen"
-    />
-
+    <link rel="canonical" href="https://www.roamlytrips.com/" />
+    <meta name="description" content="Plan je toegankelijke reizen snel en eenvoudig met Roamly. Ontdek rolstoelvriendelijke hotels en activiteiten wereldwijd dankzij AI-technologie." />
+    <meta name="keywords" content="toegankelijke reizen, rolstoelvriendelijke hotels, inclusief toerisme, reizen met beperking, toegankelijk toerisme, reizen met rolstoel" />
+  
     <!--Social Media Display-->
-    <meta
-      property="og:title"
-      content="Roamly | Toegankelijke reizen plannen met AI"
-    />
-    <meta
-      property="og:description"
-      content="Ontdek rolstoelvriendelijke hotels en activiteiten wereldwijd. Roamly maakt reizen zonder drempels mogelijk. Plan vandaag nog je trip!"
-    />
-    <meta property="og:url" content="https://www.roamly.com" />
-    <meta
-      property="og:image"
-      content="https://www.roamly.com/assets/images/social.jpg"
-    />
+    <meta property="og:title" content="Roamly | Plan jouw rolstoelvriendelijke reis eenvoudig met AI" />
+    <meta property="og:description" content="Boek moeiteloos toegankelijke hotels en activiteiten. Roamly maakt reizen zonder drempels mogelijk." />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image:secure_url"
-      content="https://www.roamly.com/assets/images/social.jpg"
-    />
-
+    <meta property="og:url" content="https://www.roamly.com/" />
+    <meta property="og:image" content="https://www.roamly.com/assets/images/social.jpg" />
+    <meta property="og:image:secure_url" content="https://www.roamly.com/assets/images/social.jpg" />
+  
     <!--Favicons-->
     <link
       rel="apple-touch-icon"
@@ -79,12 +63,9 @@
 
     <link rel="stylesheet" href="/css/core-styles.css" />
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/dark.css" />
 
-    <title>
-      Roamly | Toegankelijke reizen plannen met AI - Boek rolstoelvriendelijke
-      hotels
-    </title>
+    <title>Roamly | Boek rolstoelvriendelijke hotels en toegankelijke reizen wereldwijd</title>
+
   </head>
   <body>
     <!--Screen reader skip main nav-->
