--- a/over-ons.html
+++ b/over-ons.html
@@ -6,47 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.website.com/" />
+    <link rel="canonical" href="https://www.roamlytrips.com/over-ons" />
 
-    <meta name="description" content="Meta description for the page" />
-    <meta name="keywords" content="" />
-
+    <meta name="description" content="Ontdek het verhaal achter Roamly: de AI-gestuurde reisplanner die drempels wegneemt voor toegankelijk reizen. Iedereen verdient zorgeloos avontuur." />
+    <meta name="keywords" content="toegankelijk reizen, rolstoelvriendelijke reizen, inclusief toerisme, AI reisplanner, Roamly, drempelvrij reizen" />
+  
     <!--Social Media Display-->
-    <meta
-      property="og:title"
-      content="Title that shows up on google searches"
-    />
-    <meta property="og:description" content="Meta description for the page" />
+    <meta property="og:title" content="Over Roamly | Drempelvrij Reizen met Technologie" />
+    <meta property="og:description" content="Leer ons kennen: hoe Roamly ontstond uit frustratie en uitgroeide tot hét platform voor toegankelijk reizen wereldwijd." />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="Official link for that page (https://www.site.com)"
-    />
+    <meta property="og:url" content="https://www.roamlytravel.com/over-ons" />
     <meta property="og:image" content="/assets/images/social.jpg" />
     <meta property="og:image:secure_url" content="/assets/images/social.jpg" />
-
+  
     <!--Favicons-->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicons/favicon-32x32.png?v1"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicons/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
     <link rel="manifest" href="/assets/favicons/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-
+  
     <!-- Preload -->
     <link rel="preload" as="image" href="assets/images/logo-light.png" />
     <link
@@ -69,9 +49,8 @@
   />
     <link rel="stylesheet" href="/css/core-styles.css" />
     <link rel="stylesheet" href="/css/about.css" />
-    <link rel="stylesheet" href="/css/dark.css" />
 
-    <title>Service Keyword Phrase | Company Name | City, State</title>
+    <title>Over Roamly | Reizen Zonder Drempels</title>
   </head>
   <body>
     <!--Screen reader skip main nav-->
@@ -229,7 +208,7 @@
               Sluit je vandaag nog aan bij Roamly en ontdek de wereld zoals hij
               hoort te zijn: open en toegankelijk.
             </p>
-            <a href="" class="cs-button-solid">Sign up</a>
+            <a href="" class="cs-button-solid">Schrijf je nu in!</a>
           </div>
         </div>
         <!-- Background Image-->
@@ -258,6 +237,5 @@
         });
     </script>
 
-    <script defer src="/assets/js/nav.js"></script>
   </body>
 </html>
