--- a/blog.html
+++ b/blog.html
@@ -6,43 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.website.com/" />
+    <link rel="canonical" href="https://www.roamlytrips.com/blog" />
 
-    <meta name="description" content="Meta description for the page" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="Ontdek inspirerende verhalen en tips over toegankelijk reizen. Vind de beste rolstoelvriendelijke hotels, activiteiten en reisroutes wereldwijd met Roamly." />
+    <meta name="keywords" content="toegankelijk reizen, rolstoelvriendelijke hotels, inclusieve reizen, travel blog, rolstoelvriendelijke vakantie, reis inspiratie" />
+
 
     <!--Social Media Display-->
-    <meta
-      property="og:title"
-      content="Title that shows up on google searches"
-    />
-    <meta property="og:description" content="Meta description for the page" />
+    <meta property="og:title" content="Toegankelijk Reizen Blog | Roamly" />
+    <meta property="og:description" content="Lees tips, ervaringen en inspiratie over drempelvrij reizen wereldwijd. Roamly maakt reizen toegankelijk voor iedereen." />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="Official link for that page (https://www.site.com)"
-    />
+    <meta property="og:url" content="https://www.roamlytravel.com/blog" />
     <meta property="og:image" content="/assets/images/social.jpg" />
     <meta property="og:image:secure_url" content="/assets/images/social.jpg" />
 
     <!--Favicons-->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicons/favicon-32x32.png?v1"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicons/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png" />
     <link rel="manifest" href="/assets/favicons/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
@@ -66,9 +47,8 @@
 
     <link rel="stylesheet" href="/css/core-styles.css" />
     <link rel="stylesheet" href="/css/blog.css" />
-    <link rel="stylesheet" href="/css/dark.css" />
 
-    <title>Service Keyword Phrase | Company Name | City, State</title>
+    <title>Toegankelijk Reizen Blog | Roamly</title>
   </head>
   <body>
     <!--Screen reader skip main nav-->
@@ -159,5 +139,4 @@
       .catch(error => console.error('Error loading blog posts:', error));
   </script>
 
-  <script defer src="/assets/js/nav.js"></script>  </body>
 </html>
