--- a/over-ons.html
+++ b/over-ons.html
@@ -52,6 +52,15 @@
 
     <title>Over Roamly | Reizen Zonder Drempels</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CTKJDR399E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CTKJDR399E');
+</script>
   <body>
     <!--Screen reader skip main nav-->
     <a class="skip" aria-label="skip to main content" href="#main"
