--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="NEQ-dCBLB_5BZiBeAiBAW0O9aQvzU1sW8uAhF8c8z_k" />
 
     <!--Swap our for actual link-->
     <link rel="canonical" href="https://www.roamlytrips.com/" />
