--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
     <link rel="stylesheet" href="/css/core-styles.css" />
     <link rel="stylesheet" href="/css/index.css" />
+    <script src="/popup/popup.js" defer></script>
+    <link rel="stylesheet" href="/popup/popup.css" />
+
 
     <title>Roamly | Boek rolstoelvriendelijke hotels en toegankelijke reizen wereldwijd</title>
     
@@ -89,11 +92,11 @@
 
   gtag('config', 'G-CTKJDR399E');
 </script>
-  <body>
-    <!--Screen reader skip main nav-->
-    <a class="skip" aria-label="skip to main content" href="#main"
-      >Click To Skip To Main Content</a
-    >
+<body>
+  <!--Screen reader skip main nav-->
+  <a class="skip" aria-label="skip to main content" href="#main"
+  >Click To Skip To Main Content</a
+  >
 
     <!-- ============================================ -->
     <!--                 Navigation                   -->
@@ -114,10 +117,12 @@
     </script>
 
     <main id="main">
+      <div id="popup-container"></div>
+
       <!-- ============================================ -->
       <!--                    Hero                      -->
       <!-- ============================================ -->
-
+      
       <section id="hero-81">
         <div class="cs-container">
           <div class="cs-subcontainer">
