--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,26 +1,45 @@
 <body>
-    <div class="popup">
-        <div class="popup-content">
-            <span id="close-button" class="material-symbols-outlined close-popup" aria-label="Close popup">
-                    close
-                </span>
-            <div class="popup-header">
-                <div class="popup-image">
-                    <img src="/assets/images/travelling-contact.jpeg" alt="Man in weelchair discovering the world" class="image">
-                </div>
-                <div class="popup-sub-content">
-                    <h1>Plan je volgende reis met Roamly</h1>
-                    <p>Maak vandaag nog een <b>gratis</b> account aan en ontdek:</p>
-                    <ul>
-                        <li>AI-gegenereerde routes op maat</li>
-                        <li>Gedetailleerde reviews over rolstoeltoegankelijkheid</li>
-                        <li>Een community die echt rekening houdt met jou</li>
-                    </ul>
-                    <div class="popup-button">
-                        <button class="cs-button-solid">Gratis account aanmaken</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div
+    class="popup"
+    role="dialog"
+    aria-modal="true"
+    aria-labelledby="popup-title"
+    aria-describedby="popup-desc"
+    tabindex="-1"
+  >
+    <div class="popup-content">
+        <div class="popup-close-container">
+            <span
+            id="close-button"
+            class="material-symbols-outlined close-popup"
+            aria-label="Close popup"
+            role="button"
+            tabindex="0"
+            >
+            close   
+        </span>
     </div>
+      <div class="popup-header">
+        <div class="popup-image">
+          <img
+            src="/assets/images/travelling-contact.jpeg"
+            alt="Man in weelchair discovering the world"
+            class="image"
+          />
+        </div>
+        <div class="popup-sub-content">
+          <h1>Plan je volgende reis met Roamly</h1>
+          <p>Maak vandaag nog een <b>gratis</b> account aan en ontdek:</p>
+          <ul>
+            <li>AI-gegenereerde routes op maat</li>
+            <li>Gedetailleerde reviews over rolstoeltoegankelijkheid</li>
+            <li>Een community die echt rekening houdt met jou</li>
+          </ul>
+          <div class="popup-button">
+            <button class="cs-button-solid">Gratis account aanmaken</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
