--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p class="cs-text">
               De eerste AI-gestuurde reisplanner voor toegankelijk reizen.
             </p>
-            <a href="" class="cs-button-solid">Probeer nu gratis</a>
+            <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Probeer nu gratis</a>
           </div>
           <div>
             <img
