--- a/popup/popup.html
+++ b/popup/popup.html
@@ -36,7 +36,7 @@
             <li>Een community die echt rekening houdt met jou</li>
           </ul>
           <div class="popup-button">
-            <button href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Gratis account aanmaken</button>
+            <button onclick="window.location.href='https://websiteroamly-1.onrender.com';" class="cs-button-solid">Gratis account aanmaken</button>
           </div>
         </div>
       </div>
