--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <li>Valideerbare ervaringen en foto’s.</li>
               <li>Nooit meer twijfelen of een locatie écht toegankelijk is.</li>
             </ul>
-            <a href="" class="cs-button-solid">Probeer nu</a>
+            <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Probeer nu</a>
           </div>
         </div>
       </section>
@@ -343,7 +343,7 @@
               <br />
               Schrijf je nu in en reis zonder zorgen!
             </p>
-            <a href="" class="cs-button-solid">Schrijf je nu in</a>
+            <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Schrijf je nu in</a>
           </div>
         </div>
         <!-- Background Image-->
