--- a/over-ons.html
+++ b/over-ons.html
@@ -217,7 +217,7 @@
               Sluit je vandaag nog aan bij Roamly en ontdek de wereld zoals hij
               hoort te zijn: open en toegankelijk.
             </p>
-            <a href="" class="cs-button-solid">Schrijf je nu in!</a>
+            <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Schrijf je nu in!</a>
           </div>
         </div>
         <!-- Background Image-->
