--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
               class="hero-image"
               src="./assets/images/mockup.png"
               alt="Mobiele mockup van Roamly app voor toegankelijke reizen"
+              width="360"
+              height="640"
+              loading="lazy"
             />
           </div>
         </div>
