--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,10 @@
         <!-- Logo Group -->
         <div class="cs-logo-group">
             <a aria-label="go back to home" class="cs-logo" href="">
-                <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/fulllogoWhite.png" alt="logo" width="240" height="32">
+                <picture>
+                    <source srcset="/assets/images/fulllogoWhite.webp" type="image/webp">
+                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/fulllogoWhite.png" alt="logo" width="240" height="32">
+                </picture>
             </a>
             <p class="cs-text">
                 Plan en boek eenvoudig rolstoelvriendelijke reizen met Roamly, de eerste AI-gestuurde reisplanner voor toegankelijke hotels, activiteiten en restaurants. Gebaseerd op echte beoordelingen en directe boekingen via Booking.com. Ontdek de wereld zonder zorgen.
