--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       <section id="RPsbs-580">
         <div class="cs-container">
           <picture class="cs-picture">
+            <source srcset="/assets/images/illustration.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
