--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,10 @@
     <div class="cs-container">
         <!--Nav Logo-->
         <a href="/index.html" class="cs-logo" aria-label="back to home">
-            <img src="/assets/images/fulllogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
+            <picture>
+                <source srcset="/assets/images/fulllogo.webp" type="image/webp">
+                <img src="/assets/images/fulllogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
+            </picture>
         </a>
         <!--Navigation List-->
         <nav class="cs-nav" role="navigation">
