--- a/over-ons.html
+++ b/over-ons.html
@@ -204,6 +204,7 @@
             </p>
           </div>
           <picture class="cs-picture">
+            <source srcset="/assets/images/challenge.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
