--- a/footer.html
+++ b/footer.html
@@ -18,16 +18,16 @@
                 <span class="cs-header">Sitemap</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Home</a>
+                <a class="cs-nav-link" href="/index.html">Home</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Blog</a>
+                <a class="cs-nav-link" href="/blog.html">Blog</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Over ons</a>
+                <a class="cs-nav-link" href="/over-ons.html">Over ons</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Contact</a>
+                <a class="cs-nav-link" href="/contact.html">Contact</a>
             </li>
         </ul>
         <!-- Contact Info -->
