--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Probeer nu gratis</a>
           </div>
           <div>
+            <source srcset="/assets/images/mockup.webp" type="image/webp">
             <img
               class="hero-image"
               src="./assets/images/mockup.png"
@@ -270,6 +271,7 @@
       <section id="RPsbsr-580">
         <div class="cs-container">
           <picture class="cs-picture">
+            <source srcset="/assets/images/mockup-reviews.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
@@ -361,6 +363,7 @@
         </div>
         <!-- Background Image-->
         <picture class="cs-picture">
+          <source srcset="/assets/images/travelling.webp" type="image/webp">
           <img
             loading="lazy"
             decoding="async"
