--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Probeer nu gratis</a>
           </div>
           <div>
-            <source srcset="/assets/images/mockup.webp" type="image/webp">
+            <source srcset="./assets/images/mockup.webp" type="image/webp">
             <img
               class="hero-image"
               src="./assets/images/mockup.png"
@@ -204,7 +204,7 @@
       <section id="RPsbs-580">
         <div class="cs-container">
           <picture class="cs-picture">
-            <source srcset="/assets/images/illustration.webp" type="image/webp">
+            <source srcset="./assets/images/illustration.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
@@ -271,7 +271,7 @@
       <section id="RPsbsr-580">
         <div class="cs-container">
           <picture class="cs-picture">
-            <source srcset="/assets/images/mockup-reviews.webp" type="image/webp">
+            <source srcset="./assets/images/mockup-reviews.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
@@ -363,7 +363,7 @@
         </div>
         <!-- Background Image-->
         <picture class="cs-picture">
-          <source srcset="/assets/images/travelling.webp" type="image/webp">
+          <source srcset="./assets/images/travelling.webp" type="image/webp">
           <img
             loading="lazy"
             decoding="async"
