--- a/index.html
+++ b/index.html
@@ -144,15 +144,17 @@
             <a href="https://websiteroamly-1.onrender.com" class="cs-button-solid">Probeer nu gratis</a>
           </div>
           <div>
-            <source srcset="./assets/images/mockup.webp" type="image/webp">
-            <img
-              class="hero-image"
-              src="./assets/images/mockup.png"
-              alt="Mobiele mockup van Roamly app voor toegankelijke reizen"
-              width="360"
-              height="640"
-              loading="lazy"
-            />
+            <picture>
+              <source srcset="./assets/images/mockup.webp" type="image/webp">
+              <img
+                class="hero-image"
+                src="./assets/images/mockup.png"
+                alt="Mobiele mockup van Roamly app voor toegankelijke reizen"
+                width="360"
+                height="640"
+                loading="lazy"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -271,7 +273,7 @@
       <section id="RPsbsr-580">
         <div class="cs-container">
           <picture class="cs-picture">
-            <source srcset="./assets/images/mockup-reviews.webp" type="image/webp">
+            <source srcset="assets/images/mockup-reviews.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
