--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <source srcset="./assets/images/mockup.webp" type="image/webp">
               <img
                 class="hero-image"
-                src="./assets/images/mockup.png"
+                src="./assets/images/mockup.webp"
                 alt="Mobiele mockup van Roamly app voor toegankelijke reizen"
                 width="360"
                 height="640"
