--- a/footer.html
+++ b/footer.html
@@ -4,8 +4,7 @@
         <div class="cs-logo-group">
             <a aria-label="go back to home" class="cs-logo" href="">
                 <picture>
-                    <source srcset="/assets/images/fulllogoWhite.webp" type="image/webp">
-                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/fulllogoWhite.png" alt="logo" width="240" height="32">
+                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/fulllogoWhite.webp" alt="logo" width="240" height="32">
                 </picture>
             </a>
             <p class="cs-text">
