--- a/nav.html
+++ b/nav.html
@@ -3,8 +3,7 @@
         <!--Nav Logo-->
         <a href="/index.html" class="cs-logo" aria-label="back to home">
             <picture>
-                <source srcset="/assets/images/fulllogo.webp" type="image/webp">
-                <img src="/assets/images/fulllogo.png" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
+                <img src="/assets/images/fulllogo.webp" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
             </picture>
         </a>
         <!--Navigation List-->
