--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 alt="Mobiele mockup van Roamly app voor toegankelijke reizen"
                 width="360"
                 height="640"
-                loading="lazy"
+                loading="eager"
               />
             </picture>
           </div>
@@ -259,11 +259,10 @@
       <section id="RPsbsr-580">
         <div class="cs-container">
           <picture class="cs-picture">
-            <source srcset="assets/images/mockup-reviews.webp" type="image/webp">
             <img
               loading="lazy"
               decoding="async"
-              src="assets/images/mockup-reviews.png"
+              src="assets/images/mockup-reviews.webp"
               alt="room"
               width="494"
               height="700"
