--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <noscript><link rel="stylesheet" href="/css/index.css"></noscript>
     <script src="/popup/popup.js" defer></script>
     <link rel="stylesheet" href="/popup/popup.css" />
-
+    <link rel="preload" as="image" href="./assets/images/mockup.webp" type="image/webp">
+    <link rel="preload" as="image" href="./assets/images/mockup-reviews.webp" type="image/webp">
+    
 
     <title>Roamly | Boek rolstoelvriendelijke hotels en toegankelijke reizen wereldwijd</title>
     
